--- a/Classes/SecondDetailView.xib
+++ b/Classes/SecondDetailView.xib
@@ -14,10 +14,10 @@
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<string>IBProxyObject</string>
 			<string>IBUIImageView</string>
-			<string>IBUILabel</string>
 			<string>IBUINavigationBar</string>
 			<string>IBUINavigationItem</string>
 			<string>IBUITableView</string>
+			<string>IBUITextView</string>
 			<string>IBUIScrollView</string>
 			<string>IBUIView</string>
 		</object>
@@ -81,7 +81,7 @@
 							<object class="IBUIImageView" id="786478770">
 								<reference key="NSNextResponder" ref="590587698"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{224, -712}, {320, 2623}}</string>
+								<string key="NSFrame">{{224, 0}, {320, 623}}</string>
 								<reference key="NSSuperview" ref="590587698"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -92,10 +92,10 @@
 							<object class="IBUITableView" id="36796911">
 								<reference key="NSNextResponder" ref="590587698"/>
 								<int key="NSvFlags">306</int>
-								<string key="NSFrame">{{184, 0}, {400, 650}}</string>
+								<string key="NSFrameSize">{768, 204}</string>
 								<reference key="NSSuperview" ref="590587698"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="697509707"/>
+								<reference key="NSNextKeyView" ref="786478770"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
@@ -110,35 +110,25 @@
 								<float key="IBUISectionHeaderHeight">22</float>
 								<float key="IBUISectionFooterHeight">22</float>
 							</object>
-							<object class="IBUILabel" id="697509707">
+							<object class="IBUITextView" id="359815816">
 								<reference key="NSNextResponder" ref="590587698"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{190, 658}, {394, 151}}</string>
+								<string key="NSFrameSize">{240, 128}</string>
 								<reference key="NSSuperview" ref="590587698"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="786478770"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClipsSubviews">YES</bool>
-								<int key="IBUIContentMode">7</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
-									<string key="IBUIAccessibilityLabel">造型與構作:「手工彩色玻璃」與「傳統客家山歌」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間。</string>
-									<boolean value="NO" key="IBUIIsAccessibilityElement"/>
-								</object>
-								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">造型與構作:「手工彩色玻璃」與「傳統客家山歌」呈現的視覺、影像與音樂構成客家印象之迎賓長廊空間。</string>
-								<object class="NSColor" key="IBUITextColor">
+								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MSAxIDEAA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace">
-										<int key="NSID">1</int>
-									</object>
 								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">1</int>
-								<float key="IBUIMinimumFontSize">10</float>
-								<int key="IBUINumberOfLines">3</int>
-								<int key="IBUILineBreakMode">0</int>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<bool key="IBUIShowsHorizontalScrollIndicator">NO</bool>
+								<string key="IBUIText">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+								<object class="IBUITextInputTraits" key="IBUITextInputTraits">
+									<int key="IBUIAutocapitalizationType">2</int>
+									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								</object>
 							</object>
 						</object>
 						<string key="NSFrame">{{0, 44}, {768, 1200}}</string>
@@ -231,6 +221,14 @@
 					</object>
 					<int key="connectionID">19</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">label</string>
+						<reference key="source" ref="841351856"/>
+						<reference key="destination" ref="359815816"/>
+					</object>
+					<int key="connectionID">23</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -261,6 +259,7 @@
 							<reference ref="590587698"/>
 						</object>
 						<reference key="parent" ref="0"/>
+						<string key="objectName">View</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">8</int>
@@ -283,7 +282,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="786478770"/>
 							<reference ref="36796911"/>
-							<reference ref="697509707"/>
+							<reference ref="359815816"/>
 						</object>
 						<reference key="parent" ref="766721923"/>
 					</object>
@@ -301,10 +300,9 @@
 						<reference key="parent" ref="590587698"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">20</int>
-						<reference key="object" ref="697509707"/>
+						<int key="objectID">22</int>
+						<reference key="object" ref="359815816"/>
 						<reference key="parent" ref="590587698"/>
-						<string key="objectName">Label - Label</string>
 					</object>
 				</object>
 			</object>
@@ -319,8 +317,7 @@
 					<string>17.IBPluginDependency</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
-					<string>20.IBPluginDependency</string>
-					<string>20.showNotes</string>
+					<string>22.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
 					<string>8.object.labelIdentifier</string>
 					<string>9.IBPluginDependency</string>
@@ -335,7 +332,6 @@
 					<string>{{494, 0}, {783, 856}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<boolean value="NO"/>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>IBBuiltInLabel-Red</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -353,7 +349,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">20</int>
+			<int key="maxID">23</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -413,6 +409,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>imageView</string>
+							<string>label</string>
 							<string>navigationBar</string>
 							<string>rootViewController</string>
 							<string>scrollView</string>
@@ -421,6 +418,7 @@
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
+							<string>UITextView</string>
 							<string>UINavigationBar</string>
 							<string>RootViewController</string>
 							<string>UIScrollView</string>
@@ -432,6 +430,7 @@
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>imageView</string>
+							<string>label</string>
 							<string>navigationBar</string>
 							<string>rootViewController</string>
 							<string>scrollView</string>
@@ -442,6 +441,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">imageView</string>
 								<string key="candidateClassName">UIImageView</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">label</string>
+								<string key="candidateClassName">UITextView</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">navigationBar</string>
